# eastworld-subnet-test

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: agent_dev.md  guide_for_miner.md  guide_for_validator.md
eastworld/: __init__.py  protocol.py
eastworld/base/: miner.py  neuron.py  validator.py
eastworld/miner/: ex.py  junior.py  local_actions.json  reasoning.py  senior.py  test.py
eastworld/miner/prompts/: junior_action.txt  junior_reflection.txt  junior_system.txt  reasoning_action.txt  reasoning_reflection.txt  reasoning_system.txt  senior_action_selection.txt  senior_after_action_review.txt  senior_grounding_learning.txt  senior_landmark_annotation.txt  senior_objective_reevaluation.txt
eastworld/miner/slam/: console.py  fastslam.py  grid.py  isam.py  test_grid.py
eastworld/miner/slam/templates/: index.html
eastworld/utils/: config.py  misc.py
eastworld/validator/: forward.py  models.py  reward.py
eastworld/validator/prompts/: env_report.txt  environment.txt  objects.txt  perception.txt
neurons/: miner.py  validator.py
